<resources>
    <string name="app_name">Читаю слоги</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Следующий</string>
    <string name="change_position">Сменить позицию букв</string>

    <string name="previous">Предыдущий</string>
    <string name="ma">ма</string>
    <string name="sha">ша</string>
    <string name="ne">не</string>
    <string name="lu">лю</string>
    <string name="withAdditional">ть</string>

    <string name="counter">0</string>
    <string name="threeLetter">ива</string>
    <string name="fourLetter">игра</string>
    <string name="intonation">да!?</string>

    <string name="greeting1">Молодец!</string>
    <string name="greeting2">Умница!</string>
    <string name="greeting3">Здорово!</string>
    <string name="greeting4">Супер!!</string>
    <string name="greeting5">Великолепно!</string>
    <string name="close">Закрыть</string>
    <string name="makeChoice">Выбери уровень сложности</string>
    <string name="photo">Картинка</string>
    <string name="changed_text">%1$s%2$s</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>