<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma"
        android:textSize="180sp"
        android:textAllCaps="true"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="26dp"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:textColor="@color/grey_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/button_next"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_arrow"
        android:background="@color/white"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageButton
        android:id="@+id/change_position"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:src="@drawable/line_7"
        android:background="@color/white"
        android:contentDescription="@string/next"
        app:layout_constraintVertical_bias="0.005"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageButton
        android:id="@+id/button_close"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_close"
        android:background="@color/white"
        android:contentDescription="@string/close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:visibility="gone"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/funny_image"
        />
    <ImageView
        android:id="@+id/funny_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="gone"
        android:background="@drawable/fun_cucumber"
        android:contentDescription="@string/photo"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>